--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -6,7 +6,7 @@
 #
 footnote : "Andreas Finger :: May 2019 :: Barcelona :: @mediafinger on Github and Twitter"
 highlight : solarized-light
-logo : "assets/rabbitmq-logo-png-transparent.png"
+logo : "assets/ruby_400x400.png"
 published : false
 theme : beige
 theme-override : custom.css
